hard-gists/1189327/run.log
=== Docker Run Log for 1189327 ===
Started at: Mi 29. Okt 11:58:09 CET 2025

[2025-10-29 11:58:10] START: Running container for 1189327
[2025-10-29 11:58:10] SUCCESS: Container 14ca64da40b4e1d953e4e85cb32bcac4815bcc094cee68a53d22fa554a33a839 started for 1189327
=== Container logs for 1189327 ===
  File "/snippet.py", line 88
    print item
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1189327 ===
[2025-10-29 11:58:12] INFO: Container 14ca64da40b4e1d953e4e85cb32bcac4815bcc094cee68a53d22fa554a33a839 has stopped
